Fate UBW a0.4.1 - hotfix
=============
- Fix sasaki stuck in np

Fate UBW a0.4.0
=============
- Added model for gilles tentacle monster
- Fixed sasaki not attacking
- Made sasaki invincible during np
- WIP animation for babylon rings
- Medea can place a magic circle which empowers her (strength, regen, resistance)
- Lancelot has a chance to reflect back projectiles
- Changed to new animation system
- Fixed EntityAIFollowMaster
- Gordius wheel takes less damage when charging
- Added punishment for recalling servants
- Added magic circle for medea
- Basically finished grailwar system. Loot as .json file.

Fate UBW a0.3.0
==============
- Made servants load the chunk they are in
- Improved hassans code
- Added an easy animation system (though there are no animation atm)
- Added a command to manually reset a grail war "/grailWarReset"
- Improved the truce screen gui and added the truce system
- Removed metadata from items
- Made the projectiles from gate of babylon do damage according to their items
- Added gilles tentacle monster (model missing atm)
- Fixed residual bugs from 1.10 port
- Added attack ai to gilles
- Lowered knockback from emiyas arrows
- Added iskanders gordius wheel
- Fixed the retaliate ai
- Added a config gui
- Fixed player servants client-server sync issues after world reload
- Improved build script
- Made servant fade away and spawn particles when they die
- Removed code for projectile rendering as thats now part of TenshiLib
- Improved some projectile code
- Fixed config gui not saving

- Added option to fill in missing slots with npc servants which will spawn near players
- Removed camel case of resourcelocation for entity names
- Fixed crash with armatures model for ea
- Changed how the grail war is handled. Made servants able to spawn (filling missing slots from players)
- Made damage etc. from projectiles and others configurable
- Reduced xp amount from servants a little
- Made servants able to attack from their mount