@@ -1,3 +1,8 @@
+Fate UBW a0.4.2
+=============
+- fix particle crash
+- fix class and servant dupe config not working
+
 Fate UBW a0.4.1 - hotfix
 =============
 - Fix sasaki stuck in np
